--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -121,6 +120,21 @@
   
   .discount-code {
     @apply bg-evtrades-gold text-evtrades-blue font-bold px-2 py-1 rounded;
+  }
+  
+  /* Animated underline effect */
+  .animated-underline {
+    @apply relative text-evtrades-gold font-semibold inline-block;
+    text-decoration: none;
+  }
+  
+  .animated-underline::after {
+    content: '';
+    @apply absolute left-0 bottom-0 w-0 h-0.5 bg-evtrades-gold transition-all duration-300 ease-in-out;
+  }
+  
+  .animated-underline:hover::after {
+    @apply w-full;
   }
 }
 
